--- a/MobSec/app/src/main/res/values/strings.xml
+++ b/MobSec/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="title_text">Google Sign-In\nQuickstart</string>
+    <string name="title_text">MobSec\nYour android Security Guard</string>
 
     <!-- Sign-in status messages -->
     <string name="signed_in_fmt">Signed in as: %s</string>
